k8s/clusters/glug-infra/wikifeeds/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wikifeeds
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
